src/test/deca/context/invalid/tests/CurrentClassNotSubClassSelection.deca
// Description:
//       Teste de selection d'un Field protected .
// 
// Resultats: 
//      Ligne 18:La classe B et A doivent être des sous-classes de A où est défini le champs x
// 
// Historique:
//      cree le 21/01/2023

class A{
 protected int x;
}

class B{
  A a = new A();
  void modify(){
  // Erreur car B n'est pas un fils de A
      a.x = 2;
  }
}
